<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SigninActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary_variant"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/font_color" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userNameLabel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/user_name"
                android:textColor="@color/font_color"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/font_color"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/font_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:text="@string/password"
                android:textColor="@color/font_color"
                android:textSize="@dimen/font_size" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/font_color"
                android:ems="10"
                android:inputType="numberPassword"
                android:textColor="@color/font_color" />

        </LinearLayout>

        <Button
            android:id="@+id/signinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:text="@string/sign_in"
            android:textSize="@dimen/font_size" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>